styles/Home.module.css
/* ... */
.containerDark {
  min-height: 100vh;
  padding: 0 0.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #353535;
  color: rgb(218, 218, 218);
}

.buttonDarkTheme {
  align-self: flex-end;
  justify-self: flex-start;
  margin: 2rem;
}


.tasks {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: larger;
  margin-top: 1rem;
  margin-bottom: 1rem;
  color: rgb(218, 218, 218);
  background-color: #5a5a5a49;
  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
  border-radius: 10px;
  max-width: 50rem;
}

.taskRenameInput {
  background-color: #00684c00;
  border: none;
  outline: none;
  color: rgb(218, 218, 218);
  font-size: x-large;
  width: 160%;
}

.taskButtons {
  cursor: pointer;
  background-color: rgba(255, 255, 255, 0);
  filter: invert(100%);
  border: none;
}

.taskButtons:hover {
  filter: invert(60%);
}

.taskButtonsContainer {
  display: flex;
  flex-direction: row;
}

.logoutButton {
  cursor: pointer;
  background-color: rgba(255, 255, 255, 0);
  filter: invert(100%);
  display: flex;
  align-items: center;
  position: absolute;
  top: 1rem;
  right: 2rem;
}

.logoutButton:hover {
  filter: invert(60%);
}

.password {
  display: flex;
  flex-direction: row;
  background-color: #5f7912;
  border-radius: 10px;
  padding-left: 1rem;
  margin-top: 1rem;
  justify-content: space-between;
}

.loginButton {
  background-color: #125279;
  border-radius: 10px;
  padding-left: 1rem;
  margin-top: 1rem;
  border: none;
  color: #dadada;
  padding-left: 1rem;
  padding-right: 1rem;
  width: fit-content;
  cursor: pointer;
}

.loginButton:hover {
  background-color: #0d3c59;
}

.username {
  display: flex;
  flex-direction: row;
  background-color: #79125e;
  border-radius: 10px;
  padding-left: 1rem;
  margin-top: 1rem;
  justify-content: space-between;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.link {
  cursor: pointer;
  color: cornflowerblue;
  text-decoration: none;
  width: fit-content;
}

.link:hover {
  color: rgb(129, 129, 129);
}

.linkProject {
  border: solid 2px rgb(218, 218, 218);
  cursor: pointer;
  color: rgb(218, 218, 218);
  margin-left: 0.7rem;
  border-radius: 5px;
  font-size: 1.7rem;
  padding: 0.5px 9px 5px 9px;
  transition-duration: 200ms;
}

.linkProject:hover {
  transform: translate(0px, 4px);
  color: rgb(129, 129, 129);
  transition-duration: 200ms;
}

.projectBox:hover {
  color: darkgoldenrod;
  transition-duration: 300ms;
}

.title {
  margin: 0 0 3rem 0;
  line-height: 1.15;
  font-size: 3.6rem;
}

.mainTitleContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-bottom: 3rem;
}

.title {
  text-align: center;
}

.title,
.description {
  text-align: center;
}


.description {
  line-height: 1.5;
  font-size: 1.5rem;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
  margin-top: 1rem;
}


.card {
  margin: 1rem;
  flex-basis: 45%;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h3 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  align-self: flex-end;
  height: 1.2em;
  filter: invert(80%);
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

.footerName {
  text-shadow: 0px 0px 15px rgb(0, 0, 0);
  transition-duration: 200ms;
}

.footerName:hover {
  font-size: larger;
  transition-duration: 200ms;
}

.projManSelection {
  position: absolute;
  top: 5%;
  left: 3%;
}

.projManSelectionButton {
  cursor: pointer;
  transition-duration: 200ms;
  filter: invert(80%);
}

.projManSelectionButton:hover {
  filter: invert(50%);
  ;
  transition-duration: 200ms;
}

.projManSelectionButtonSelected {
  cursor: pointer;
  transform: rotate(90deg);
  transition-duration: 200ms;
  filter: invert(80%);
}

.projMan {
  position: absolute;
  transform: translate(60px, -80px);
  display: flex;
  flex-direction: column;
  background-color: rgb(98, 0, 0);
  box-shadow: 0px 0px 10px 6px rgba(22, 22, 22, 0.61);
  padding: 1rem;
  border-radius: 10px;
  width: 100%;
  top: 100px;
}

.projManRenameInput {
  /* background-color: #a4a4a4; */
  border: none;
  border-radius: 5px;
}

.deleteButton {
  color: white;
  background-color: rgb(155, 45, 45);
  margin-top: 1rem;
  border: none;
  border-radius: 5px;
  padding: 0.5rem;
  transition-duration: 200ms;
}

.deleteButton:hover {
  box-shadow: 0px 0px 5px 5px rgba(34, 34, 34, 0.41);
  background-color: red;
  font-weight: bold;
  transition-duration: 200ms;
  cursor: pointer;
}

.renameProjContainer {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.projectsSeparator {
  border-top: solid white 1px;
  text-align: center;
  width: 100%;
  display: inline-block;
  margin-top: 3rem;
  padding-top: 1.5rem;
  font-size: x-large;
}

.projectBoxYellow {
  transition-duration: 200ms;
  cursor: pointer;
  background-color: hsl(61, 73%, 40%);
  padding: 2px 10px 7px 10px;
  margin: 10px;
  border-radius: 5px;
  font-size: 1.7rem;
  text-decoration: none;
  color: rgb(229, 229, 229);
}

.projectBoxYellow:hover {
  transform: translate(0px, 4px);
  color: #353535;
  transition-duration: 200ms;
  background-color: hsl(61, 73%, 70%);
}

.projectBoxRed {
  transition-duration: 200ms;
  cursor: pointer;
  background-color: hsl(1, 78%, 40%);
  padding: 2px 10px 7px 10px;
  margin: 10px;
  border-radius: 5px;
  font-size: 1.7rem;
  text-decoration: none;
  color: rgb(229, 229, 229);
}
/* ... */

